--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Awesh Chodhary",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
